bowling gui integration in micronaut server app
